[package]
name = "icy-isaac-mod-manager"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Raoul1808/icy-isaac-mod-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
directories = "5.0.1"
iced = "0.10.0"
open = "5.0.1"
quick-xml = { version = "0.31.0", features = ["serialize"] }
rand = "0.8.5"
rfd = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
